Updated the fork and added better memory allocation
* The fork was updated to the most recent master branch of the
Aloja/aloja repository (last commit included: 8d6f96c)
* This commit also includes more memory settings. In benchmark_s2rdf,
there is a JDBC4RDF executor memory setting now (in the form of
executor.urisuffix) and HADOOP_CLIENT_OPTS uses more memory now. This
was required for running benchmarks with a scale factor of 100,000

--- a/shell/conf/cluster_BQ-date-185.conf
+++ b/shell/conf/cluster_BQ-date-185.conf
@@ -2,10 +2,10 @@
 source "$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )/google_defaults.conf"
 
 clusterID="$(get_id_cluster "$(basename $BASH_SOURCE)")"
-clusterName="BQ-${clusterID}"
+clusterName="BQ-date-${clusterID}"
 numberOfNodes="10" #starts at 0 (max 99)
 #Node config
-vmSize='BQ'
+vmSize='BQ-date'
 
 #default volumes
 attachedVolumes="0"
@@ -18,6 +18,6 @@ vmRAM="100" #in GB
 #costs
 clusterCostHour="16.49" # cost for a full TPC-H run
 clusterType="SaaS"
-clusterDescription="Big Query"
+clusterDescription="Big Query after date fix"
 
 extraLocalCommands=""
