--- a/shell/conf/cluster_minerva100-11-18-161.conf
+++ b/shell/conf/cluster_minerva100-11-18-161.conf
@@ -10,6 +10,9 @@ numberOfNodes="6" #starts at 0 (max 99)
 
 nodeNames="$(seq -f 'minerva-%0g' 111 117)"
 
+# list of extra nodes to instrument (ie., storage servers
+extraNodeNames="minerva-118"
+
 useProxy="ssh -i ../secure/keys/id_rsa npoggi@minerva.bsc.es -p 22 nc %h %p 2> /dev/null"
 
 #Node config
