--- a/shell/conf/cluster_vagrant-99.conf
+++ b/shell/conf/cluster_vagrant-99.conf
@@ -11,6 +11,9 @@ numberOfNodes="1" #starts at 0 (max 99)
 
 nodeNames="$(seq -f "$clusterName-%02g" 0 "$numberOfNodes")"
 
+# list of extra nodes to instrument (ie., storage servers
+extraNodeNames="aloja-web"
+
 #Node config
 vmSize='vagrant-1CPU2GB' #just a descriptor
 
