Third attempt at updating the fork
Should include all previous commits of main repository, including
8d6f96c

--- a/aloja-web/config/perfdetailsrouter.yml
+++ b/aloja-web/config/perfdetailsrouter.yml
@@ -28,3 +28,8 @@ histogramhdi:
     pattern: "/histogramhdi"
     controller: "alojaweb\\Controller\\PerfDetailsController::histogramHDIAction"
     screenName: "Histogram HDP2"
+
+chord:
+    pattern: "/chord"
+    controller: "alojaweb\\Controller\\PerfDetailsController::chordAction"
+    screenName: "Read/Writte performance"
