--- a/config/bench/config_files/hadoop1_AOP_conf_template/log4j.properties
+++ b/config/bench/config_files/hadoop1_AOP_conf_template/log4j.properties
@@ -141,7 +141,7 @@ log4j.additivity.org.apache.hadoop.mapred.JobInProgress$JobSummary=false
 # ALOJA AOP4Hadoop
 #
 log4j.appender.ALOJA=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.ALOJA.File=${hadoop.log.dir}/aloja.log
+log4j.appender.ALOJA.File=${hadoop.log.dir}/aloja/${hadoop.log.file}
 log4j.appender.ALOJA.layout=org.apache.log4j.PatternLayout
 log4j.appender.ALOJA.layout.ConversionPattern=%d{ISO8601}, %m%n
 log4j.logger.AlojaAspect=INFO, ALOJA
