--- a/shell/conf/cluster_s2rdf-182.conf
+++ b/shell/conf/cluster_s2rdf-182.conf
@@ -8,9 +8,13 @@ numberOfNodes="2" #starts at 0 (max 99)
 #Node config
 vmSize='A7'
 
+# yarn-site changes
+CONTAINER_MAX_MB=51200
+NUM_CORES=7
+
 #details
 vmCores="8"
-vmRAM="56" #in GB
+vmRAM="52" #in GB
 
 #costs
 clusterCostHour="2.64" #(0.88 * 9)
